# howfar

./: README.md  com.github.linux-distance-tracker.json  com.kj7rrv.howfar.json  distance.py  gpsd_api.py  meson.build  python3-vincenty.json  tracker.py
builddir/: build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/src/: ldt
data/: com.github.linux-distance-tracker.appdata.xml.in  com.github.linux-distance-tracker.desktop.in  com.github.linux-distance-tracker.gschema.xml  com.kj7rrv.howfar.appdata.xml.in  com.kj7rrv.howfar.desktop.in  com.kj7rrv.howfar.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: how_far.gresource.xml  how_far.in  howfar.gresource.xml  howfar.in  ldt.gresource.xml  ldt.in  main.py  meson.build  window.py  window.ui
src/conversion/: imperial.py  metric.py  us_customary.py
src/gps/: distance.py  tracker.py
